# kvc

./: meson.build
include/: meson.build
include/kvc/: kvc.hpp  utils.hpp
src/: kvc.cpp  kvc.hpp  meson.build  utils.cpp  utils.hpp
tests/: arrays.cpp  config.cpp  files.cpp  meson.build  version.cpp
tests/data/: strings.txt
